[gd_scene load_steps=16 format=2]

[ext_resource path="res://vessels/test_rocket_001/Sparrow1.glb" type="PackedScene" id=1]
[ext_resource path="res://vessels/test_rocket_001/leg.gd" type="Script" id=2]

[sub_resource type="VisualShaderNodeColorUniform" id=5]
uniform_name = "ColorUniform"

[sub_resource type="VisualShaderNodeScalarUniform" id=6]
uniform_name = "roughness"

[sub_resource type="VisualShaderNodeScalarUniform" id=7]
uniform_name = "Metalic"

[sub_resource type="VisualShader" id=8]
code = "shader_type spatial;
render_mode specular_schlick_ggx;

uniform vec4 ColorUniform : hint_color;
uniform float Metalic;
uniform float roughness;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = ColorUniform.rgb;
	float n_out2p1 = ColorUniform.a;

// ScalarUniform:4
	float n_out4p0 = Metalic;

// ScalarUniform:3
	float n_out3p0 = roughness;

// Output:0
	ALBEDO = n_out2p0;
	METALLIC = n_out4p0;
	ROUGHNESS = n_out3p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -438, 161 )
nodes/fragment/0/position = Vector2( 400, 180 )
nodes/fragment/2/node = SubResource( 5 )
nodes/fragment/2/position = Vector2( 100, 140 )
nodes/fragment/3/node = SubResource( 6 )
nodes/fragment/3/position = Vector2( 140, 380 )
nodes/fragment/4/node = SubResource( 7 )
nodes/fragment/4/position = Vector2( 140, 260 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 3, 0, 0, 3, 4, 0, 0, 2 )

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/ColorUniform = Color( 0.411765, 0.411765, 0.411765, 1 )
shader_param/Metalic = 1.005
shader_param/roughness = 0.247

[sub_resource type="VisualShaderNodeColorUniform" id=10]
uniform_name = "ColorUniform"

[sub_resource type="VisualShaderNodeScalarUniform" id=11]
uniform_name = "Roughness"

[sub_resource type="VisualShader" id=12]
code = "shader_type spatial;
render_mode specular_schlick_ggx;

uniform vec4 ColorUniform : hint_color;
uniform float Roughness;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = ColorUniform.rgb;
	float n_out2p1 = ColorUniform.a;

// ScalarUniform:3
	float n_out3p0 = Roughness;

// Output:0
	ALBEDO = n_out2p0;
	METALLIC = n_out3p0;
	ROUGHNESS = n_out3p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -451, 94 )
nodes/fragment/2/node = SubResource( 10 )
nodes/fragment/2/position = Vector2( -20, 120 )
nodes/fragment/3/node = SubResource( 11 )
nodes/fragment/3/position = Vector2( 160, 260 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 3, 0, 0, 3, 3, 0, 0, 2 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/ColorUniform = Color( 0.756863, 0, 1, 1 )
shader_param/Roughness = -0.015

[sub_resource type="VisualShaderNodeColorUniform" id=14]
uniform_name = "ColorUniform"

[sub_resource type="VisualShaderNodeScalarUniform" id=15]
uniform_name = "Roughness"

[sub_resource type="VisualShader" id=3]
code = "shader_type spatial;
render_mode specular_schlick_ggx;

uniform vec4 ColorUniform : hint_color;
uniform float Roughness;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = ColorUniform.rgb;
	float n_out2p1 = ColorUniform.a;

// ScalarUniform:3
	float n_out3p0 = Roughness;

// Output:0
	ALBEDO = n_out2p0;
	METALLIC = n_out3p0;
	ROUGHNESS = n_out3p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -435, 86 )
nodes/fragment/2/node = SubResource( 14 )
nodes/fragment/2/position = Vector2( 140, 140 )
nodes/fragment/3/node = SubResource( 15 )
nodes/fragment/3/position = Vector2( 200, 280 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 3, 0, 0, 3, 3, 0, 0, 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/ColorUniform = null
shader_param/Roughness = 0.314

[node name="Sparrow1" instance=ExtResource( 1 )]

[node name="engine" parent="." index="0"]
transform = Transform( 1, 0.000152455, 0.000183519, -0.000152335, 1, -0.000637511, -0.000183619, 0.000637482, 1, 0, 1.05524, 0 )
material/0 = SubResource( 9 )

[node name="leg" parent="." index="1"]
material/0 = SubResource( 13 )
script = ExtResource( 2 )
deploySpeed = null

[node name="Tween" type="Tween" parent="leg" index="0"]

[node name="leg2" parent="." index="2"]
transform = Transform( -0.00932655, -0.00173118, 0.999955, 0.999316, 0.03576, 0.00938253, -0.0357746, 0.999359, 0.00139645, 0, 1.61327, -1.00041 )
material/0 = SubResource( 13 )
script = ExtResource( 2 )
deploySpeed = null

[node name="Tween" type="Tween" parent="leg2" index="0"]

[node name="leg3" parent="." index="3"]
transform = Transform( 0.0142837, -0.999898, 7.10543e-15, 0.999898, 0.0142837, -2.66426e-15, 1.59901e-10, 2.38742e-12, 1, -1.00041, 1.61327, -1.19209e-07 )
material/0 = SubResource( 13 )
script = ExtResource( 2 )
deploySpeed = null

[node name="Tween" type="Tween" parent="leg3" index="0"]

[node name="leg4" parent="." index="4"]
material/0 = SubResource( 13 )
script = ExtResource( 2 )
deploySpeed = null

[node name="Tween" type="Tween" parent="leg4" index="0"]

[node name="rocket_body" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0135422, 9.53674e-07, 0.0156035 )
material/0 = SubResource( 4 )
